# libnamegen

./: Doxyfile.in  configure.ac  libnamegen.c  namegen.c  namegen.h
src/: Makefile.am  libnamegen.c  namegen.c  namegen.h
tests/: Makefile.am  fixed.c  fixed.ts
